CB-31396 Database disk gets incorrectly mixed up in Azure
This commit contains a fix for consistent device name generation.
Actually, it is a port of the AWS implementation, already in place.